# expectation-cryptanalysis-on-round-reduced-aes

./: .gitignore  LICENSE_UINT128T  README.md
cpp/: .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md  lint.sh
cpp/include/ciphers/: aes.h  aes_state.h  aes_tables.h  mini_aes.h  random_function.h  small_aes.h  small_aes_m02_mc.h  small_aes_midori_mc.h  small_aes_present_sbox.h  small_aes_present_sbox_m02_mc.h  small_aes_present_sbox_midori_mc.h  small_aes_pride_sbox.h  small_aes_prince_sbox.h  small_aes_random_sbox.h  small_aes_toy10_sbox.h  small_aes_toy6_sbox.h  small_aes_toy8_sbox.h  small_sboxes.h  small_state.h  small_state_pair.h  speck64.h
cpp/include/internal/: iterbase.hpp
cpp/include/utils/: argparse.h  hash_table_generator.h  product.h  uint128_t.h  utils.h  xorshift1024.h
cpp/scripts/: Makefile  lint.sh  run-distinguisher.sh  run-key-recovery.sh
cpp/src/ciphers/: aes.cc  mini_aes.cc  small_aes.cc  small_aes_m02_mc.cc  small_aes_midori_mc.cc  small_aes_present_sbox.cc  small_aes_present_sbox_m02_mc.cc  small_aes_present_sbox_midori_mc.cc  small_aes_pride_sbox.cc  small_aes_prince_sbox.cc  speck64.cc  (+4 more)
cpp/tests/: test_aes128.cc  test_delta_sets_have_no_multiple_of_8_small.cc  test_five_round_distinguisher.cc  test_five_round_distinguisher_byte_combinations_small.cc  test_five_round_distinguisher_present_sbox_small.cc  test_five_round_distinguisher_pride_sbox_small.cc  test_five_round_distinguisher_prince_sbox_small.cc  test_five_round_distinguisher_small.cc  test_five_round_distinguisher_toy10_sbox_small.cc  test_five_round_distinguisher_toy6_sbox_small.cc  test_five_round_distinguisher_toy8_sbox_small.cc  test_five_round_from_three_columns_distinguisher_small.cc  test_five_round_non_delta_set_test.cc  test_five_round_non_delta_sets_small.cc  test_five_round_single_byte_alt_distinguisher.cc  test_five_round_single_byte_alt_distinguisher_present_sbox_small.cc  test_five_round_single_byte_alt_distinguisher_small.cc  test_five_round_single_byte_distinguisher.cc  test_five_round_single_byte_distinguisher_m02_mc_small.cc  test_five_round_single_byte_distinguisher_midori_mc_small.cc  test_five_round_single_byte_distinguisher_present_sbox_m02_mc_small.cc  test_five_round_single_byte_distinguisher_present_sbox_midori_mc_small.cc  test_five_round_single_byte_distinguisher_present_sbox_small.cc  test_five_round_single_byte_distinguisher_small.cc  test_five_round_single_byte_distinguisher_toy10_sbox_small.cc  test_five_round_single_column_distinguisher_small.cc  test_four_round_distinguisher.cc  test_four_round_distinguisher_byte_combinations_small.cc  test_four_round_distinguisher_byte_equations_small.cc  test_four_round_distinguisher_byte_equations_tables_small.cc  test_four_round_distinguisher_m02_mc_byte_combinations_small.cc  test_four_round_distinguisher_midori_mc_byte_combinations_small.cc  test_four_round_distinguisher_present_sbox_byte_combinations_small.cc  test_four_round_distinguisher_present_sbox_byte_equations_small.cc  test_four_round_distinguisher_present_sbox_m02_mc_byte_combinations_small.cc  test_four_round_distinguisher_present_sbox_midori_mc_byte_combinations_small.cc  test_four_round_distinguisher_present_sbox_small.cc  test_four_round_distinguisher_pride_sbox_small.cc  test_four_round_distinguisher_prince_sbox_small.cc  test_four_round_distinguisher_random_sbox_small.cc  (+39 more)
(+4 files in other folders)
